Experimentation flows working in sciflow conda env

--- a/nbs/experiment/lake_observer.ipynb
+++ b/nbs/experiment/lake_observer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
     "from sacred.dependencies import get_digest\n",
     "from sacred.observers.base import RunObserver\n",
     "from sacred.serializer import flatten\n",
-    "from text_discovery.s3_utils import (\n",
+    "from sciflow.s3_utils import (\n",
     "    delete_dir,\n",
     "    is_valid_bucket,\n",
     "    list_s3_subdirs,\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,10 +110,14 @@
     "        self.experiment_name = experiment_name\n",
     "        if bucket_name is None:\n",
     "            try:\n",
-    "                bucket_name = os.environ['SCIFLOW_BUCKET']\n",
+    "                bucket_name = os.environ[\"SCIFLOW_BUCKET\"]\n",
     "            except KeyError:\n",
-    "                raise ValueError('Bucket name must be provided or set using SCIFLOW_BUCKET env')\n",
-    "        self.bucket_name = os.environ['SCIFLOW_BUCKET'] if bucket_name is None else bucket_name\n",
+    "                raise ValueError(\n",
+    "                    \"Bucket name must be provided or set using SCIFLOW_BUCKET env\"\n",
+    "                )\n",
+    "        self.bucket_name = (\n",
+    "            os.environ[\"SCIFLOW_BUCKET\"] if bucket_name is None else bucket_name\n",
+    "        )\n",
     "        if not is_valid_bucket(self.bucket_name):\n",
     "            raise ValueError(\n",
     "                \"Your chosen bucket name doesn't follow AWS bucket naming rules\"\n",
@@ -123,7 +127,9 @@
     "            if experiments_key_prefix is None\n",
     "            else experiments_key_prefix\n",
     "        )\n",
-    "        self.experiments_key = s3_join(self.experiments_key_prefix, self.experiment_name)\n",
+    "        self.experiments_key = s3_join(\n",
+    "            self.experiments_key_prefix, self.experiment_name\n",
+    "        )\n",
     "        self.experiment_dir = s3_join(self.bucket_name, self.experiments_key)\n",
     "        self.bucket_name = bucket_name\n",
     "        self.priority = priority\n",
@@ -152,7 +158,6 @@
     "                    \"You must either pass in an AWS region name, or have a \"\n",
     "                    \"region name specified in your AWS config file\"\n",
     "                )\n",
-    "            \n",
     "\n",
     "    def put_data(self, key, binary_data):\n",
     "        self.s3.Object(self.bucket_name, key).put(Body=binary_data)\n",
@@ -187,23 +192,6 @@
     "        return store_path, md5sum\n",
     "\n",
     "    def _determine_run_dir(self, run_id):\n",
-    "#         if _id is None:\n",
-    "#             path_subdirs = list_s3_subdirs(\n",
-    "#                 self.s3, self.bucket_name, s3_join(self.experiments_key, \"runs\")\n",
-    "#             )\n",
-    "#             if not path_subdirs:\n",
-    "#                 max_run_id = 0\n",
-    "#             else:\n",
-    "#                 integer_directories = [int(d) for d in path_subdirs if d.isdigit()]\n",
-    "#                 if not integer_directories:\n",
-    "#                     max_run_id = 0\n",
-    "#                 else:\n",
-    "#                     # If there are directories under experiments_key that aren't\n",
-    "#                     # numeric run directories, ignore those\n",
-    "#                     max_run_id = max(integer_directories)\n",
-    "\n",
-    "#             _id = max_run_id + 1\n",
-    "\n",
     "        self.runs_dir = s3_join(self.experiments_key, \"runs\", str(run_id))\n",
     "        self.metrics_dir = s3_join(self.experiments_key, \"metrics\", str(run_id))\n",
     "        self.artifacts_dir = s3_join(self.experiments_key, \"artifacts\", str(run_id))\n",
@@ -220,13 +208,15 @@
     "        for dir_to_check in self.dirs:\n",
     "            if objects_exist_in_dir(self.s3, self.bucket_name, dir_to_check):\n",
     "                raise FileExistsError(\n",
-    "                    \"S3 dir at {}/{} already exists\".format(self.bucket_name, dir_to_check)\n",
+    "                    \"S3 dir at {}/{} already exists\".format(\n",
+    "                        self.bucket_name, dir_to_check\n",
+    "                    )\n",
     "                )\n",
     "\n",
     "    def queued_event(\n",
     "        self, ex_info, command, host_info, queue_time, config, meta_info, _id\n",
     "    ):\n",
-    "        self._determine_run_dir(meta_info['run_id'])\n",
+    "        self._determine_run_dir(meta_info[\"run_id\"])\n",
     "\n",
     "        self.run_entry = {\n",
     "            \"experiment\": dict(ex_info),\n",
@@ -246,8 +236,8 @@
     "    def started_event(\n",
     "        self, ex_info, command, host_info, start_time, config, meta_info, _id\n",
     "    ):\n",
-    "        self._determine_run_dir(meta_info['run_id'])\n",
-    "        self.experiment_id = meta_info['run_id']\n",
+    "        self._determine_run_dir(meta_info[\"run_id\"])\n",
+    "        self.experiment_id = meta_info[\"run_id\"]\n",
     "\n",
     "        ex_info[\"sources\"] = self.save_sources(ex_info)\n",
     "\n",
@@ -323,7 +313,7 @@
     "    def __eq__(self, other):\n",
     "        if isinstance(other, AWSLakeObserver):\n",
     "            return (\n",
-    "                self.experiment_name == other.experiment_name \n",
+    "                self.experiment_name == other.experiment_name\n",
     "                and self.bucket_name == other.bucket_name\n",
     "                and self.experiments_key_prefix == other.experiments_key_prefix\n",
     "            )\n",
@@ -333,11 +323,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "project = 'sciflow'\n",
+    "project = \"sciflow\"\n",
     "experiment_name = \"observer_test\"\n",
     "bucket_name = \"s3bawspprwe1chatbotunpub01\"\n",
     "experiments_key_prefix = \"discovery/experiments/test/\"\n",
@@ -347,11 +337,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['SCIFLOW_BUCKET'] = bucket_name\n",
+    "os.environ[\"SCIFLOW_BUCKET\"] = bucket_name\n",
     "observer = AWSLakeObserver(project, experiment_name)\n",
     "observer = AWSLakeObserver(\n",
     "    project, experiment_name, experiments_key_prefix=experiments_key_prefix\n",
@@ -366,7 +356,11 @@
     ")\n",
     "try:\n",
     "    observer = AWSLakeObserver(\n",
-    "        project, experiment_name, invalid_bucket, experiments_key_prefix, region=\"eu-west-1\"\n",
+    "        project,\n",
+    "        experiment_name,\n",
+    "        invalid_bucket,\n",
+    "        experiments_key_prefix,\n",
+    "        region=\"eu-west-1\",\n",
     "    )\n",
     "except ValueError as ve:\n",
     "    assert \"naming\" in str(ve).lower()"
@@ -374,14 +368,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sacred import Experiment\n",
     "from sacred.run import Run\n",
-    "\n",
     "from sciflow.s3_utils import delete_dir\n",
+    "\n",
     "s3 = boto3.resource(\"s3\")\n",
     "delete_dir(s3, \"s3bawspprwe1chatbotunpub01\", \"discovery/experiments/test/test_lake_obs\")\n",
     "\n",
@@ -390,7 +384,7 @@
     "ex = Experiment(\"test_lake_obs\", interactive=True)\n",
     "\n",
     "obs = AWSLakeObserver(\n",
-    "    project, \n",
+    "    project,\n",
     "    experiment_name=ex_name,\n",
     "    bucket_name=\"s3bawspprwe1chatbotunpub01\",\n",
     "    experiments_key_prefix=experiments_key_prefix,\n",
@@ -398,10 +392,11 @@
     "\n",
     "ex.observers.append(obs)\n",
     "\n",
+    "\n",
     "@ex.config\n",
     "def my_config():\n",
     "    recipient = \"test\"\n",
-    "    message = \"Hello %s!\" % recipient\n",
+    "    \"Hello %s!\" % recipient\n",
     "\n",
     "\n",
     "@ex.main\n",
@@ -414,16 +409,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_id = str(uuid.uuid4()).replace('-', '_')"
+    "sample_id = str(uuid.uuid4()).replace(\"-\", \"_\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +443,7 @@
        "<sacred.run.Run at 0x7ff8649277d0>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,24 +451,40 @@
    "source": [
     "# slow\n",
     "\n",
-    "ex.run(meta_info={'run_id': sample_id})"
+    "ex.run(meta_info={\"run_id\": sample_id})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert(objects_exist_in_dir(boto3.resource(\"s3\"), \"s3bawspprwe1chatbotunpub01\", f\"discovery/experiments/test/test_lake_obs/artifacts/{sample_id}/requirements-generated.txt\"))\n",
-    "assert(objects_exist_in_dir(boto3.resource(\"s3\"), \"s3bawspprwe1chatbotunpub01\", f\"discovery/experiments/test/test_lake_obs/artifacts/{sample_id}/dataframe_artifact.csv\"))\n",
-    "assert(objects_exist_in_dir(boto3.resource(\"s3\"), \"s3bawspprwe1chatbotunpub01\", f\"discovery/experiments/test/test_lake_obs/metrics/{sample_id}/metrics.csv\"))\n",
-    "assert(objects_exist_in_dir(boto3.resource(\"s3\"), \"s3bawspprwe1chatbotunpub01\", f\"discovery/experiments/test/test_lake_obs/runs/{sample_id}/run.json\"))"
+    "assert objects_exist_in_dir(\n",
+    "    boto3.resource(\"s3\"),\n",
+    "    \"s3bawspprwe1chatbotunpub01\",\n",
+    "    f\"discovery/experiments/test/test_lake_obs/artifacts/{sample_id}/requirements-generated.txt\",\n",
+    ")\n",
+    "assert objects_exist_in_dir(\n",
+    "    boto3.resource(\"s3\"),\n",
+    "    \"s3bawspprwe1chatbotunpub01\",\n",
+    "    f\"discovery/experiments/test/test_lake_obs/artifacts/{sample_id}/dataframe_artifact.csv\",\n",
+    ")\n",
+    "assert objects_exist_in_dir(\n",
+    "    boto3.resource(\"s3\"),\n",
+    "    \"s3bawspprwe1chatbotunpub01\",\n",
+    "    f\"discovery/experiments/test/test_lake_obs/metrics/{sample_id}/metrics.csv\",\n",
+    ")\n",
+    "assert objects_exist_in_dir(\n",
+    "    boto3.resource(\"s3\"),\n",
+    "    \"s3bawspprwe1chatbotunpub01\",\n",
+    "    f\"discovery/experiments/test/test_lake_obs/runs/{sample_id}/run.json\",\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +494,7 @@
     "delete_dir(s3, \"s3bawspprwe1chatbotunpub01\", \"discovery/experiments/test/test_empty\")\n",
     "\n",
     "obs = AWSLakeObserver(\n",
-    "    project, \n",
+    "    project,\n",
     "    experiment_name=ex_name,\n",
     "    bucket_name=\"s3bawspprwe1chatbotunpub01\",\n",
     "    experiments_key_prefix=experiments_key_prefix,\n",
@@ -495,7 +506,7 @@
     "@ex.config\n",
     "def my_config():\n",
     "    recipient = \"test\"\n",
-    "    message = \"Hello %s!\" % recipient\n",
+    "    \"Hello %s!\" % recipient\n",
     "\n",
     "\n",
     "@ex.main\n",
@@ -505,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +541,7 @@
        "<sacred.run.Run at 0x7ff857480fd0>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +549,7 @@
    "source": [
     "# slow\n",
     "\n",
-    "ex.run(meta_info={'run_id': sample_id})"
+    "ex.run(meta_info={\"run_id\": sample_id})"
    ]
   },
   {
@@ -551,21 +562,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:jovyan-discovery]",
+   "display_name": "Python [conda env:sciflow]",
    "language": "python",
-   "name": "conda-env-jovyan-discovery-py"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "name": "conda-env-sciflow-py"
   }
  },
  "nbformat": 4,
