--- a/nbs/parse_module.ipynb
+++ b/nbs/parse_module.ipynb
@@ -355,18 +355,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nx.write_graphml_lxml(\n",
-    "    dag, os.path.join(Path(\".\").resolve(), \"test\", \"test_dag.graphml\")\n",
-    ")\n",
+    "# # TODO graphml export is not working - FIX\n",
+    "# nx.write_graphml_lxml(\n",
+    "#   dag, os.path.join(Path(\".\").resolve(), \"test\", \"test_dag.graphml\")\n",
+    "# )\n",
     "nx.write_gml(dag, os.path.join(Path(\".\").resolve(), \"test\", \"test_dag.gml\"))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:jovyan-discovery]",
+   "display_name": "Python [conda env:sciflow]",
    "language": "python",
-   "name": "conda-env-jovyan-discovery-py"
+   "name": "conda-env-sciflow-py"
   }
  },
  "nbformat": 4,
