--- a/nbs/test/test_export.ipynb
+++ b/nbs/test/test_export.ipynb
@@ -266,7 +266,7 @@
    "source": [
     "# exportn_step:last\n",
     "# TODO: finisih this\n",
-    "def last(some_param: None):\n",
+    "def last():\n",
     "    \"\"\"\n",
     "    Clean up and close connections\"\"\"\n",
     "    one = {\"one\": 1}\n",
@@ -290,9 +290,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:jovyan-discovery]",
+   "display_name": "Python [conda env:sciflow]",
    "language": "python",
-   "name": "conda-env-jovyan-discovery-py"
+   "name": "conda-env-sciflow-py"
   }
  },
  "nbformat": 4,
