--- a/nbs/packaging.ipynb
+++ b/nbs/packaging.ipynb
@@ -62,7 +62,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -275,6 +284,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "@call_parse\n",
+    "def sciflow_update_reqs():\n",
+    "    update_requirements()\n",
+    "    print(\"Updated requirements in settings.ini\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "config = ConfigParser(delimiters=[\"=\"])\n",
     "test_config_file = os.path.join(test_dir, \"settings.ini\")\n",
     "config.read(test_config_file)\n",
@@ -466,12 +490,15 @@
       "text/plain": [
        "['eval \"$(conda shell.bash hook)\"\\n',\n",
        " 'source .bashrc 2>/dev/null\\n',\n",
+       " 'export LIB_NAME=sciflow\\n',\n",
+       " 'export VERSION=0.0.4\\n',\n",
+       " 'export BUILD_NUMBER=0\\n',\n",
        " 'export ARTIFACTORY_USER=nexus_eut_svc\\n',\n",
        " 'export ARTIFACTORY_PASSWORD=AKCp8hzCxcyh1Uh9s4LMNZKmEHY1V4jwUhfqRsEUvdvMNZKhyncwt8MTtzwaq2rZkhx6dxW3e\\n',\n",
        " 'export ARTIFACTORY_URL=ndartifactory.jfrog.io\\n',\n",
        " 'export ARTIFACTORY_CONDA_CHANNEL=conda-local\\n',\n",
        " 'export LIB_NAME=sciflow\\n',\n",
-       " 'export VERSION=0.0.2\\n',\n",
+       " 'export VERSION=0.0.4\\n',\n",
        " 'export BUILD_NUMBER=0\\n']"
       ]
      },
@@ -577,9 +604,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:jovyan-discovery]",
+   "display_name": "Python [conda env:sciflow]",
    "language": "python",
-   "name": "conda-env-jovyan-discovery-py"
+   "name": "conda-env-sciflow-py"
   }
  },
  "nbformat": 4,
