--- a/nbs/utils.ipynb
+++ b/nbs/utils.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -64,26 +64,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#export\n",
+    "# export\n",
     "\n",
     "\n",
     "def lib_path(*lib_relative_path):\n",
-    "    lib_root_path = find_project_root(srcs=(str(Path('.').resolve()), ))\n",
+    "    lib_root_path = find_project_root(srcs=(str(Path(\".\").resolve()),))\n",
     "    return Path(os.path.join(lib_root_path, *lib_relative_path))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert(str(lib_path(\"nbs\")).endswith('sciflow/nbs'))\n",
-    "assert(Path('test/test_clustering.ipynb').resolve() == lib_path(\"nbs\", \"test\", \"test_clustering.ipynb\"))"
+    "assert str(lib_path(\"nbs\")).endswith(\"sciflow/nbs\")\n",
+    "assert Path(\"test/test_clustering.ipynb\").resolve() == lib_path(\n",
+    "    \"nbs\", \"test\", \"test_clustering.ipynb\"\n",
+    ")"
    ]
   },
   {
@@ -95,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -221,18 +223,6 @@
    "display_name": "Python [conda env:jovyan-discovery]",
    "language": "python",
    "name": "conda-env-jovyan-discovery-py"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.10"
   }
  },
  "nbformat": 4,
