--- a/nbs/utils.ipynb
+++ b/nbs/utils.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,8 +29,8 @@
     "import subprocess\n",
     "from pathlib import Path\n",
     "\n",
+    "from turbodbc import connect, make_options, Megabytes\n",
     "import nbdev\n",
-    "from data_access.dremio_access import DremioAccess\n",
     "from fastcore.script import call_parse\n",
     "from nbdev.clean import nbdev_clean_nbs\n",
     "from nbqa.find_root import find_project_root"
@@ -38,18 +38,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -64,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,115 +105,114 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Headless Dremio Access"
+    "# ODBC Connection"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
     "\n",
-    "def shell_source(script):\n",
-    "    \"\"\"Sometime you want to emulate the action of \"source\" in bash,\n",
-    "    settings some environment variables. Here is a way to do it.\n",
-    "    From: https://stackoverflow.com/questions/7040592/calling-the-source-command-from-subprocess-popen\n",
-    "    \"\"\"\n",
-    "\n",
-    "    pipe = subprocess.Popen(\". %s; env\" % script, stdout=subprocess.PIPE, shell=True)\n",
-    "    output = pipe.communicate()[0]\n",
-    "    env = dict((line.split(\"=\", 1) for line in output.decode(\"utf-8\").splitlines()))\n",
-    "    os.environ.update(env)"
+    "def prepare_env(env_file_path: str = None):\n",
+    "    if env_file_path is None:\n",
+    "        env_file_path = os.path.expanduser('~/.sciflow/env')\n",
+    "    # TODO create this for user\n",
+    "    if not os.path.exists(env_file_path):\n",
+    "        raise EnvironmentError(f'You need to create a Sciflow env file at: {env_file_path}')\n",
+    "    with(open(env_file_path, 'r')) as env_file:\n",
+    "        for line in env_file.readlines():\n",
+    "            key, value = line.strip().split('=', 1)\n",
+    "            os.environ[key.replace('export ', '')] = value\n",
+    "            print(key.replace('export ', ''), value)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "shell_source(\"/home/jovyan/.profile\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export\n",
     "\n",
     "\n",
-    "def load_dremio_access():\n",
-    "    if os.path.exists(\"/home/jovyan/.auth/dremio\"):\n",
-    "        with open(\"/home/jovyan/.auth/dremio\", \"r\") as pat_file:\n",
-    "            pat = pat_file.read().strip()\n",
-    "            DremioAccess._get_dremio_password = lambda x: pat\n",
-    "    else:\n",
-    "        shell_source(\"/home/jovyan/.profile\")\n",
-    "        if \"DREMIO_PWD\" in os.environ:\n",
-    "            DremioAccess._get_dremio_password = lambda x: os.environ[\"DREMIO_PWD\"]\n",
-    "    return DremioAccess()"
+    "def odbc_connect(options = None):\n",
+    "    if options is None:\n",
+    "        options = make_options(\n",
+    "            fetch_wchar_as_char=True,\n",
+    "            autocommit=True,\n",
+    "            read_buffer_size=Megabytes(5),\n",
+    "        )\n",
+    "    connection = connect(driver=os.environ['ODBC_DRIVER'],\n",
+    "                         host=os.environ['ODBC_HOST'],\n",
+    "                         port=os.environ['ODBC_PORT'],\n",
+    "                         uid=os.environ['ODBC_USER'],\n",
+    "                         pwd=os.environ['ODBC_PWD'],\n",
+    "                         SSL=1,\n",
+    "                         TrustedCerts=os.environ['SSL_CERTS'],\n",
+    "                         turbodbc_options=options,\n",
+    "                )\n",
+    "    return connection"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dremio_access = load_dremio_access()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Add Dremio Access to startup script"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting /home/jovyan/.ipython/profile_default/startup/002.py\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%writefile ~/.ipython/profile_default/startup/002.py\n",
-    "\n",
-    "import os\n",
+    "# export\n",
     "\n",
     "\n",
-    "if os.path.exists('/home/jovyan/.auth/dremio'):\n",
-    "    with open('/home/jovyan/.auth/dremio', 'r') as pat_file:\n",
-    "        pat = pat_file.read().strip()\n",
-    "        DremioAccess._get_dremio_password = lambda x: pat\n",
-    "    dremio_access = DremioAccess()"
+    "def query_odbc(conn, sql, strings_as_dictionary=False, adaptive_integers=False, \n",
+    "               strings_to_categorical=False, date_as_object=False):\n",
+    "    with conn.cursor() as cursor:\n",
+    "        df = (cursor.execute(sql)\n",
+    "                            .fetchallarrow(\n",
+    "                                strings_as_dictionary=False,\n",
+    "                                adaptive_integers=False,\n",
+    "                            )\n",
+    "                            .to_pandas(\n",
+    "                                strings_to_categorical=False,\n",
+    "                                date_as_object=False,\n",
+    "                            )\n",
+    "                        )\n",
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import turbodbc\n",
+    "conn = odbc_connect()\n",
+    "assert(type(conn) == turbodbc.connection.Connection)\n",
+    "assert(query_odbc(conn, \"SELECT 1 AS test_col\")['test_col'].iloc[0] == 1)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:jovyan-discovery]",
+   "display_name": "Python [conda env:sciflow]",
    "language": "python",
-   "name": "conda-env-jovyan-discovery-py"
+   "name": "conda-env-sciflow-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
